--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
                     <img src="project1.png" alt="Project 1">
                     <div class="layer">
                         <h5>Portfolio</h5>
-                        <p>Description of the project.</p>
-                        <a href="#"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                        <p>compilation of academic and professional materials that exemplifies your beliefs, skills, qualifications, education, training, and experiences.</p>
+                        <a href="https://revanthgande03.github.io/portfolio/"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
                     </div>
                 </div>
                 <div class="row">
                     <img src="project2.jpg" alt="Project 2">
                     <div class="layer">
-                        <h5>Project Title 2</h5>
-                        <p>Description of the project.</p>
-                        <a href="#"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                        <h5>landing page</h5>
+                        <p>web page, created specifically for a marketing or advertising campaign. It's where a visitor “lands” after they click on a link in an email, or ads from Google, Bing, YouTube, Facebook, Instagram, Twitter, or similar places on the web.</p>
+                        <a href="https://revanthgande03.github.io/landingpage/"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
                     </div>
                 </div>
                 <div class="row">
