--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="project2.jpg" alt="Project 2">
+                    <img src="project2.png" alt="Project 2">
                     <div class="layer">
                         <h5>landing page</h5>
                         <p>web page, created specifically for a marketing or advertising campaign. It's where a visitor “lands” after they click on a link in an email, or ads from Google, Bing, YouTube, Facebook, Instagram, Twitter, or similar places on the web.</p>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="project3.jpg" alt="Project 3">
+                    <img src="project3.png" alt="Project 3">
                     <div class="layer">
                         <h5>Project Title 3</h5>
                         <p>Description of the project.</p>
