--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                 <div class="row">
                     <img src="project3.png" alt="Project 3">
                     <div class="layer">
-                        <h5>Project Title 3</h5>
-                        <p>Description of the project.</p>
+                        <h5>calculator</h5>
+                        <p>A calculator is a machine which allows people to do math operations more easily. with simple html, css and js</p>
                         <a href="#"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
                     </div>
                 </div>
