--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="layer">
                         <h5>calculator</h5>
                         <p>A calculator is a machine which allows people to do math operations more easily. with simple html, css and js</p>
-                        <a href="https://revanthgande03.github.io/cal/"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
+                        <a href="https://revanthgande03.github.io/calculator/"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
                     </div>
                 </div>
             </div>
